<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FindBookFragment"
    android:background="@android:color/white"
    >
    <com.google.android.material.card.MaterialCardView
            android:id="@+id/searchEditOverlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:cardBackgroundColor="#FFF"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusableInTouchMode="true"
            android:focusable="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/navigationButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="Navigation"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <EditText
            android:id="@+id/searchEditText"
            android:paddingStart="16dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:ellipsize="end"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="Search by title or author..."
            android:imeOptions="flagNoExtractUi|actionSearch"
            android:inputType="textFilter|textNoSuggestions"
            android:maxLines="1"
            android:textColor="#8C000000"
            android:textColorHighlight="#8C000000"
            android:textSize="17sp"

            app:layout_constraintStart_toEndOf="@id/navigationButton"
            app:layout_constraintEnd_toStartOf="@+id/clearButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/alternateText"
            android:paddingStart="16dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="#8C000000"
            android:textColorHighlight="#8C000000"
            android:textSize="17sp"
            android:text="Vehicle Map Filters"
            android:visibility="gone"

            app:layout_constraintStart_toEndOf="@id/navigationButton"
            app:layout_constraintEnd_toStartOf="@+id/clearButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <!--textAutoComplete|textAutoCorrect" -->
        <!--
        -->
        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="center"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            android:tint="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.trixiesoft.mybooks.ui.widgets.TouchyRecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditOverlay"
        />

    <ProgressBar
        android:id="@+id/busy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
    />
</androidx.constraintlayout.widget.ConstraintLayout>