...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                style="@style/CustomTabLayout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="start"
                android:background="@android:color/white"
                app:tabGravity="fill"
...
            app:fabAlignmentMode="center"

            app:hideOnScroll="true"
            app:layout_scrollFlags="scroll|enterAlways"
    />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_book_add"
        android:tint="@android:color/white"
        app:layout_anchor="@id/bottom_app_bar"
        />
...
