...
            tools:text="Kenny Goers"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"

            />
    </LinearLayout>
    <ImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_vertical"
        android:paddingEnd="8dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_more_vert_24dp"
...
